Code smells fixes